--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Wed Oct 17 11:55:49 PDT 2018
+<html>
+  <head><title>\m/</title></head>
+
+  <body>
+    <p><a href="cis607/">CIS 607 resources</a> <i>(University of Oregon, fall 2018)</i></p>
+  </body>
+</html>
+
